examples/test/testpolicy6542.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6542
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key42: value1
      key36: value37
      key44: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value41
          key29: value9
      podSelector:
        matchLabels:
          key31: value0
          key40: value44
